--- a/src/main/resources/templates/admin/showAll.html
+++ b/src/main/resources/templates/admin/showAll.html
@@ -1,77 +1,95 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <title>Admin Panel</title>-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
-<!--</head>-->
-<!--<body>-->
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-<!--    <div class="container-fluid">-->
-<!--        <a class="navbar-brand" href="/admin">Admin Panel</a>-->
-<!--    </div>-->
-<!--</nav>-->
-
-<!--<div class="container mt-5">-->
-<!--    <h1 class="mb-4">All Users</h1>-->
-<!--    <a href="/admin/users/new" class="btn btn-success mb-3">Add New User</a>-->
-<!--    <table class="table table-striped">-->
-<!--        <thead>-->
-<!--        <tr>-->
-<!--            <th>ID</th>-->
-<!--            <th>First Name</th>-->
-<!--            <th>Last Name</th>-->
-<!--            <th>Age</th>-->
-<!--            <th>Email</th>-->
-<!--            <th>Role</th>-->
-<!--            <th>Actions</th>-->
-<!--        </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--        <tr th:each="user : ${users}">-->
-<!--            <td th:text="${user.id}"></td>-->
-<!--            <td th:text="${user.firstName}"></td>-->
-<!--            <td th:text="${user.lastName}"></td>-->
-<!--            <td th:text="${user.age}"></td>-->
-<!--            <td th:text="${user.email}"></td>-->
-<!--            <td th:text="${user.role}"></td>-->
-<!--            <td>-->
-<!--                <a th:href="@{/admin/users/edit/{id}(id=${user.id})}" class="btn btn-warning btn-sm">Edit</a>-->
-<!--                <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" class="btn btn-danger btn-sm">Delete</a>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        </tbody>-->
-<!--    </table>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>All users</title>
+    <title>Admin Panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 
-<div th:each="user : ${users}">
-    <a th:href="@{/admin/{id}(id=${user.getId()})}"
-       th:text="${user.getUsername() + ', ' + user.getAge() + ', ' + user.getEmail()}">user</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/admin">Admin Panel</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <!-- Кнопка Logout -->
+                    <form th:action="@{/logout}" method="post" class="d-inline">
+<!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                        <button type="submit" class="btn btn-danger">Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<div class="container mt-5">
+    <h1 class="mb-4">All Users</h1>
+    <a href="/auth/registration" class="btn btn-success mb-3">Add New User</a>
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th>ID</th>
+            <th>Username</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.username}"></td>
+            <td th:text="${user.age}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.roles}"></td>
+            <td>
+                <a th:href="@{/admin/{id}/edit(id=${user.id})}" class="btn btn-warning btn-sm">Edit</a>
+            </td>
+            <td>
+                <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}" class="btn btn-danger btn-sm">
+                    <input type="submit" value="Delete"/>
+                </form>
+            </td>
+
+        </tr>
+        </tbody>
+    </table>
 </div>
-
-<br>
-
-<hr/>
-
-<br>
-<br>
-<br>
-
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="logout"/>
-</form>
-
 </body>
 </html>
+
+
+<!--<!DOCTYPE html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<html lang="en">-->
+
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>All users</title>-->
+<!--</head>-->
+
+<!--<body>-->
+
+<!--<div th:each="user : ${users}">-->
+<!--    <a th:href="@{/admin/{id}(id=${user.getId()})}"-->
+<!--       th:text="${user.getUsername() + ', ' + user.getAge() + ', ' + user.getEmail()}">user</a>-->
+<!--</div>-->
+
+<!--<br>-->
+
+<!--<hr/>-->
+
+<!--<br>-->
+<!--<br>-->
+<!--<br>-->
+
+<!--<form th:action="@{/logout}" method="post">-->
+<!--    <input type="submit" value="logout"/>-->
+<!--</form>-->
+
+<!--</body>-->
+<!--</html>-->
